# text-classifier

./: README.md  pyproject.toml  text_classifier.ipynb
data/: readme.txt
