[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["salsabilmislat <salsabilmislat196@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.4"
pandas = "^1.3.4"
matplotlip = "^0.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
